# seo-checklist

./: .gitignore  2026-05-13-173029-this-session-is-being-continued-from-a-previous-c.txt  2026-05-14-155815-this-session-is-being-continued-from-a-previous-c.txt  CHAT_TRANSCRIPT.txt  README.md  docker-compose.yml  package-lock.json  package.json
app/: layout.tsx  page.tsx
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_manual_marks.py  0003_drop_manual_marks.py  0004_outline_columns.py  0005_user_settings.py  0006_password_reset.py
backend/app/: main.py
backend/app/api/: analysis.py  auth.py  deps.py  router.py  sources.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: analysis.py  user.py
backend/app/schemas/: _base.py  analysis.py  auth.py  sources.py
backend/app/services/: ai_content_audit.py  ai_proofread.py  auto_fix.py  competitor_compare.py  email.py  gemini.py  google_docs.py  outline_ai_compare.py  outline_compare.py  report_export.py  seo_analyzer.py  web_fetcher.py
backend/tests/: test_ai_content_audit.py  test_google_docs.py  test_outline_compare.py  test_seo_analyzer.py
components/: CategorySection.tsx  InputForm.tsx  Sidebar.tsx
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnalyzingCard.tsx  ArticleHighlight.tsx  (+15 more)
lib/: seoAnalyzer.ts  types.ts
(+11 files in other folders)
